Добавлен адаптив для шапки

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="root">
   <div class="page">
-    <header class="header">
+    <header class="header page__header">
       <nav class="header__nav">
         <ul class="header__links">
           <li class="header__list"><a href="#" class="header__link">Мечты</a></li>
