Добавлена адаптивная секция lead

--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
         </ul>
       </nav>
     </header>
+
+    <main class="content page__content">
+      <section class="lead content__lead">
+        <div>
+          <p class="lead__caption">Куда я поеду</p>
+          <h1 class="lead__title">Куда я&nbsp;поеду сразу, как можно будет куда-то поехать</h1>
+        </div>
+        <img src="./images/intro-image.jpeg" alt="" class="lead__image">
+      </section>
+    </main>
   </div>
 </body>
 </html>
