--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <link rel="stylesheet" href="./pages/index.css">
   <title>Куда я поеду?</title>
 </head>
-<body class="root">
-  <div class="page">
+<body class="page">
     <header class="header page__header">
       <nav class="header__nav">
         <ul class="header__links">
@@ -29,6 +28,12 @@
         <img src="./images/intro-image.jpeg" alt="" class="lead__image">
       </section>
     </main>
-  </div>
+
+  <footer class="footer page__footer">
+    <div class="footer__text-container">
+      <p class="footer__copyright">&copy;&nbsp;&nbsp;Анатолий&nbsp;&nbsp;и&nbsp;&nbsp;Кристина</p>
+      <p class="footer__year">2022</p>
+    </div>
+  </footer>
 </body>
 </html>
