Доделана шапка и lead, добавлена секция places

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <link rel="stylesheet" href="./pages/index.css">
   <title>Куда я поеду?</title>
 </head>
-<body class="root">
-  <div class="page">
+<body class="page">
     <header class="header page__header">
       <nav class="header__nav">
         <ul class="header__links">
@@ -26,9 +25,35 @@
           <p class="lead__caption">Куда я поеду</p>
           <h1 class="lead__title">Куда я&nbsp;поеду сразу, как можно будет куда-то поехать</h1>
         </div>
-        <img src="./images/intro-image.jpeg" alt="" class="lead__image">
+        <img src="./images/intro-image.jpeg" alt="Вид из иллюминатора" class="lead__image">
+      </section>
+
+      <section class="places content__places">
+        <img src="./images/places-forest.jpeg" alt="Лес" class="places__image places__item">
+        <div class="places__description places__item">
+          <h2 class="places__title">Поеду в лес</h2>
+          <div class="places__paragraphs">
+            <p class="places__paragraph">Лес&nbsp;&mdash; экологическая система, биоценоз, в&nbsp;которой главной жизненной формой являются деревья.</p>
+            <p class="places__paragraph">Лес&nbsp;&mdash; составная часть природы, понятие &laquo;лес&raquo; можно рассматривать на&nbsp;разных уровнях. В&nbsp;глобальном масштабе&nbsp;&mdash; это часть биосферы, в&nbsp;локальном&nbsp;&mdash; это может быть насаждение. Леса занимают около трети площади суши.</p>
+          </div>
+        </div>
+
+        <div class="places__description places__item">
+          <h2 class="places__title">Поеду в горы</h2>
+          <p class="places__paragraph">Горные системы занимают 64&nbsp;% поверхности Азии, 36&nbsp;%&nbsp;&mdash; Северной Америки, 25&nbsp;%&nbsp;&mdash; Европы, 22&nbsp;%&nbsp;&mdash; Южной Америки, 17&nbsp;%&nbsp;&mdash; Австралии и&nbsp;3&nbsp;%&nbsp;&mdash; Африки. В&nbsp;целом 24&nbsp;% земной поверхности приходится на&nbsp;горы.&nbsp;10&nbsp;% всех людей живёт на&nbsp;территории гор. В&nbsp;горах берёт своё начало большинство рек Земли.</p>
+        </div>
+        <img src="./images/places-mountains.jpeg" alt="Горы" class="places__image places__item">
+
+        <img src="./images/places-black-sea.jpeg" alt="Море" class="places__image places__item">
+        <div class="places__description places__item">
+          <h2 class="places__title">Поеду на Чёрное море</h2>
+          <div class="places__paragraphs">
+            <p class="places__paragraph">Я&nbsp;уплыву туда, где ни&nbsp;разу я&nbsp;не&nbsp;был, туда, где никто раньше не&nbsp;был. Никто и&nbsp;никогда раньше не&nbsp;был, я&nbsp;уплыву. Я&nbsp;позову тебя смотреть на&nbsp;синее небо и&nbsp;пить по&nbsp;капле синее небо, и&nbsp;падать в&nbsp;это синее небо, я&nbsp;позову.</p>
+            <p class="places__paragraph">Уеду я&nbsp;на&nbsp;Чёрное-Чёрное море, на&nbsp;Чёрное-Чёрное море, на&nbsp;Чёрное-Чёрное море уеду&nbsp;я. Уеду я&nbsp;на&nbsp;Чёрное-Чёрное море, на&nbsp;Чёрное-Чёрное море, на&nbsp;Чёрное-Чёрное море.</p>
+            <p class="places__paragraph">Уеду я.</p>
+          </div>
+        </div>
       </section>
     </main>
-  </div>
 </body>
 </html>
