--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
   <footer class="footer page__footer">
     <div class="footer__text-container">
-      <p class="footer__copyright">&copy;&nbsp;&nbsp;Анатолий&nbsp;&nbsp;и&nbsp;&nbsp;Кристина</p>
+      <p class="footer__copyright">&copy; Анатолий и Кристина</p>
       <p class="footer__year">2022</p>
     </div>
   </footer>
