--- a/index.html
+++ b/index.html
@@ -54,6 +54,31 @@
           </div>
         </div>
       </section>
+
+      <section class="rate content__rate">
+        <div class="rate__container">
+          <p class="rate__caption">Куда я поеду</p>
+          <h2 class="rate__title">Куда я&nbsp;поеду сразу, как можно будет куда-то поехать</h2>
+        </div>
+        <div class="rate__table">
+          <div class="rate__table-cell">
+            <h2 class="rate__table-cell-title">Иван Бунин</h2>
+            <p class="rate__table-cell-paragraph">Человека делают счастливым три вещи: любовь, интересная работа и&nbsp;возможность путешествовать.</p>
+          </div>
+          <div class="rate__table-cell">
+            <h2 class="rate__table-cell-title">Альбер Камю</h2>
+            <p class="rate__table-cell-paragraph">Путешествие как самая великая и&nbsp;серьезная наука помогает нам вновь обрести себя.</p>
+          </div>
+          <div class="rate__table-cell">
+            <h2 class="rate__table-cell-title">Норвежская пословица</h2>
+            <p class="rate__table-cell-paragraph">Лишь тот, кто странствует, открывает новые пути.</p>
+          </div>
+          <div class="rate__table-cell">
+            <h2 class="rate__table-cell-title">Мария Захарова</h2>
+            <p class="rate__table-cell-paragraph">В принципе зарубежная поездка – это серьезнейшее, ответственнейшее и очень рискованное предприятие.</p>
+          </div>
+        </div>
+      </section>
     </main>
 
   <footer class="footer page__footer">
